# claude_MCP_R-D

./: .dockerignore  .gitignore  Dockerfile  build-local.bat  conversation_history_manager.py  elastic_mcp.py  main.py  models.py  post_retriver.py  pyproject.toml  requirements.txt  run-local.bat  test_mcp_http_server.py  test_retrive_documents.py
adapters/: embedding_service.py  es_client.py
common/: __init__.py  delta_context_extractor.py  language.py  parse_history.py  status_helper.py
common/document_formatter/: __init__.py  document_formatter.py
common/elastic_retrive_node/: __init__.py  models.py  retrive_node.py  rrf_ranker.py  utils.py
configuration/: __init__.py  application_config.py  application_logging_config.py  configuration.py  elastic_search_config.py  google_key_management_config.py
configuration/types/: __init__.py  authentication_method_types.py
helpers/: __init__.py  database_configuration.py
pocketflows/: __init__.py  common.py  types.py
templates/: documents.jinja2  system_prompt.jinja2
